<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">记忆大师</string>
    <string name="start_game">开始训练</string>
    <string name="round">轮</string>
    <string name="win">你的成绩</string>
    <string name="once_more">再玩一次</string>
    <string name="save">保存成绩</string>
    <string name="exit">返回菜单</string>
    <string name="input_name">输入名字</string>
    <string name="default_name">无名大师</string>
    <string name="name">玩家名字</string>
    <string name="score">得分</string>
    <string name="score_list">记忆大师榜</string>
    <string name="help">训练方法</string>
    <string name="close">关闭</string>
    <string name="easy_game">入门级</string>
    <string name="normal_game">普通级</string>
    <string name="hard_game">大师级</string>
    <string name="save_complete">保存成功，您想做什么？</string>
    <string name="author" />
    <string name="help_content">" 1.点击\"开始训练\"后屏幕出现两行图标。
 2.仔细看屏幕上出现的第一行图标，努力记住。
 3.当第一行图标消失后，第二行出现，从第二行中选出第一行出现过的图标。
 4.如果答案正确，将得分；如果错误会直接进入下一轮测试。
 5.完成10轮测试后将计算总分和等级，并可记录成绩。"</string>
</resources>
