<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/level" android:background="@drawable/menu_bg" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/easy" android:background="@drawable/btn1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/easy_game" />
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/normal" android:background="@drawable/btn2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/normal_game" />
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/hard" android:background="@drawable/btn3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hard_game" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/menu" android:background="@drawable/menu_bg" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/start" android:background="@drawable/btn1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_game" />
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/score" android:background="@drawable/btn2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score_list" />
        <Button android:textSize="10.0pt" android:textColor="#ffffffff" android:id="@id/help" android:background="@drawable/btn3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" />
    </LinearLayout>
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:scaleType="center" android:layout_centerVertical="true" />
    <ImageView android:id="@id/adView" android:layout_width="320.0dip" android:layout_height="wrap_content" />
</RelativeLayout>